       * SNMP v3 available for SNMP scans
       * Add new --ssl configuration option to enable or disable certificate check during SSL communications
       * Change 'SERIAL' field name and add checksum for inventory XML CPUS section 
       * Now getting MANUFACTURER and SERIALNUMBER in Snmp/3375.pm
       * Add new fields in setSnmpLoadBalancer() method in Common.pm

2.0.x
       * Add missing DESCRIPTION field in addController() in Common.pm
       * Set debug and lazy options to 0, in generated ocsinventory-agent.cfg file by macOSX graphic installer, if check boxes are not selected
       * Add a new configuration option to set lazy mode in MacOSX graphic installer 
       * Improve MacOSX postinstall script to able to deploy MacOSX agent using NetInstall      

2.0.5
       * Fix Bug #953968 about MacOSX OCSNG.app crash under MacOSX 10.4 64 bits
       * Fix bug about illegal hexadecimal digit in Snmp/Host_Resources_Mib.pm
       * Fix segfault and buffer overflow bugs in ipdiscover.c
       * Improve OCS MacOSX agent internationalization support
       * Back to previous pane after wrong OCS server address warning in MacOSX installer
       
2.0.4
       * Improve memory slots detection under MacOSX 10.7 in MacOS/Mem.pm
       * Force OCSNG.app to become the topmost window in tools/macosx/ocsng_app-xcode/main.m
       * Fix Bug #901570 about wrong printer name if no printer found in MacOS/Printers.pm
       * Solving CPU and memories inventory detection under MacOSX Snow Leopard and MacOSX Lion
       * Modifying MacOSX backend files to use the new Mac::Sysprole Perl module version
       * Fix Bug #887534 about invalid CREATEDATE in lib/Ocsinventory/Agent/Backend/OS/Linux/Drives.pm

2.0.3
       * Fix Bug #881406 about security issue due to snmp_com.txt file which is no longer used
       * Fix Bug #874269 about wrong conversion if hard drive >= TB in MacOS/Storages.pm
       * Fix Bug #879487 about a misplaced object release in ocs_agent_configPane.m
    